--- a/src/main/resources/templates/owners/createOrUpdateOwnerForm.html
+++ b/src/main/resources/templates/owners/createOrUpdateOwnerForm.html
@@ -11,11 +11,14 @@
       <input
         th:replace="~{fragments/inputField :: input ('Last Name', 'lastName', 'text')}" />
       <input
+        th:replace="~{fragments/inputField :: input ('Age', 'age', 'text')}" />
+      <input
         th:replace="~{fragments/inputField :: input ('Address', 'address', 'text')}" />
       <input
         th:replace="~{fragments/inputField :: input ('City', 'city', 'text')}" />
       <input
         th:replace="~{fragments/inputField :: input ('Telephone', 'telephone', 'text')}" />
+        
     </div>
     <div class="form-group">
       <div class="col-sm-offset-2 col-sm-10">
